# mpl-wgpu

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  README.md  ROADMAP.md  SUMMARY.md  build.rs  output.ppm
cmake/: webgpu.cmake
cpp/backend/: wgpu_backend.cpp  wgpu_backend.h
docs/: NEXT_STEPS.md  WGPU_RENDERING_TEST_PLAN.md
examples/: errorbar.rs
examples/cpp/: CMakeLists.txt  gpu_plot.cc  headless_test.cc  image_utils.cc  image_utils.h  minimal_renderer.cc  minimal_renderer.h  sdl2_window.cc  sdl2_window.h  simple_plot.cc  test_cases.cc  test_cases.h  test_gallery.cc  test_render.cc  window.cc  window.h
examples/rust/: simple_plot.rs  test_display.rs
include/matplot/backend/: wgpu_backend.h
src/: backend.rs  c_api.cpp  c_api.h  capture.rs  compare.rs  ffi.rs  lib.rs  plotting.rs  primitives.rs  test_cases.rs  text.rs
src/backend/: frame_capture.cc  frame_capture.h  primitive_renderer.cc  primitive_renderer.h  primitives.wgsl  webgpu.hpp  wgpu_backend.cc
tests/: visual_regression.rs
tests/common/: mod.rs
