[package]
name = "mpl-wgpu"
version = "0.1.0"
edition = "2021"
authors = ["Karl Ruskowski"]
license = "MIT"
description = "wgpu rendering backend for matplotplusplus with Rust bindings"
repository = "https://github.com/yourusername/mpl-wgpu"
readme = "README.md"
keywords = ["plotting", "visualization", "wgpu", "gpu", "graphics"]
categories = ["graphics", "visualization", "science"]

[lib]
name = "mpl_wgpu"
path = "src/lib.rs"

[dependencies]
wgpu = "0.18"
glam = "0.25"
bytemuck = { version = "1.14", features = ["derive"] }
anyhow = "1.0"

[build-dependencies]
cc = "1.0"
bindgen = "0.69"

[dev-dependencies]
env_logger = "0.11"

[[example]]
name = "simple_plot"
path = "examples/rust/simple_plot.rs"
