[package]
name = "mpl-wgpu"
version = "0.1.0"
edition = "2021"
authors = ["Karl Ruskowski"]
license = "MIT"
description = "wgpu rendering backend for matplotplusplus with Rust bindings"
repository = "https://github.com/yourusername/mpl-wgpu"
readme = "README.md"
keywords = ["plotting", "visualization", "wgpu", "gpu", "graphics"]
categories = ["graphics", "visualization", "science"]

[lib]
name = "mpl_wgpu"
path = "src/lib.rs"

[dependencies]
wgpu = "0.20"
wgpu_text = "0.8"
glam = "0.25"
bytemuck = { version = "1.14", features = ["derive"] }
anyhow = "1.0"
winit = "0.29"
pollster = "0.3"
image = "0.25"
raw-window-handle = { version = "0.6", optional = true }
sdl2 = { version = "0.37", optional = true, features = ["raw-window-handle"] }

[features]
default = []
test-display = ["sdl2", "raw-window-handle"]

[build-dependencies]
cc = "1.0"
bindgen = "0.69"
cmake = "0.1"

[dev-dependencies]
env_logger = "0.11"
serial_test = "3"

[[example]]
name = "simple_plot"
path = "examples/rust/simple_plot.rs"

[[example]]
name = "test_display"
path = "examples/rust/test_display.rs"
required-features = ["test-display"]
